--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,6 +76,16 @@ p {
     display: inline-block;
     margin-left: 20px;
 }
+
+/* these attributes have been added in order to consolidate the atributtes at the end of this sheet and make the code more concise and readable */
+.content img {
+    max-height: 200px;
+}
+
+.content h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
  /* grouped these styles with the content styling in order to improve readability of the code */
 
 .search-engine-optimization {
@@ -116,11 +126,24 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead {
+/* below i have cleaned up some of the attributes given to the aside element as i thought they were unecessary if a proper format was found */
+.benefit {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
+.benefit h3 {
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+.benefit img {
+    display: block;
+    margin: 10px auto;
+    max-width: 150px;
+}
+
+/* 
 .benefit-brand {
     margin-bottom: 32px;
     color: #ffffff;
@@ -129,14 +152,10 @@ p {
 .benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
-}
+} */
 
-.benefit-lead h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
 
-.benefit-brand h3 {
+/* .benefit-brand h3 {
     margin-bottom: 10px;
     text-align: center;
 }
@@ -144,14 +163,10 @@ p {
 .benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
-}
+} */
 
-.benefit-lead img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
 
+/* 
 .benefit-brand img {
     display: block;
     margin: 10px auto;
@@ -162,9 +177,12 @@ p {
     display: block;
     margin: 10px auto;
     max-width: 150px;
-}
+} */
 
-.search-engine-optimization img {
+
+/* i have commented out these attributes as i have found a more CSS selectors */
+
+/* .search-engine-optimization img {
     max-height: 200px;
 }
 
@@ -174,9 +192,9 @@ p {
 
 .social-media-marketing img {
     max-height: 200px;
-}
+} */
 
-.search-engine-optimization h2 {
+/* .search-engine-optimization h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
@@ -189,7 +207,7 @@ p {
 .social-media-marketing h2 {
     margin-bottom: 20px;
     font-size: 36px;
-}
+} */
 
 .footer {
     padding: 30px;
