--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,9 +86,9 @@ p {
     margin-bottom: 20px;
     font-size: 36px;
 }
- /* grouped these styles with the content styling in order to improve readability of the code */
+ /* grouped these styles with an appropriate CSS selector in order to improve readability of the code */
 
-.search-engine-optimization {
+.content-detailed{
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -96,6 +96,16 @@ p {
     background-color: #0072bb;
     color: #ffffff;
 }
+
+/* .search-engine-optimization {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+
 
 .online-reputation-management {
     margin-bottom: 20px;
@@ -113,7 +123,7 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     color: #ffffff;
-}
+} */
 
 .benefits {
     margin-right: 20px;
@@ -209,13 +219,13 @@ p {
     font-size: 36px;
 } */
 
-.footer {
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
-.footer h2 {
+footer h2 {
     font-size: 20px;
 }
